# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  package-lock.json  package.json  spec.yaml  tailwind.config.js
.github/workflows/: general.yml
.sqlx/: query-09193d6c08543480fb5201bb9811c1a2c9803534f60fc191e1100511c99525d5.json  query-2b3b1aa917631753edf12f15a2ee0f7736845f1057c64e3ff60d139fcd4166f7.json  query-2f7682d2c03877302a00ffd05380fba6d87be17c31c029054a25ad7437c82425.json  query-65cfee9f963b355bfcc6d691ba805b8b2814bd1a09eab7697bbd7f2d010f327e.json  query-66c8a7ad548014067a13189e119f5ce6d990a75891646a2ced8ef6d072611944.json  query-68464ef04294fce872ec864ac319e0a3346e0045d245f4417acfbfc421026c90.json  query-68cc1ede3d7916fe1e7d911becae7da392e11f55ed2df0c2572f729f1becbb91.json  query-714f501da476c468bf8fa63a5093ab9d52df92743421df2fee8563b7a1941c29.json  query-95606a0a1830cca1e8f2c9f10541ba2113c4619d8d8bd3f5f8b895081c21214a.json  query-be7dce69e4b9a1f4e1827e282386b3844c6eaaf71998c8180ff0a3ab8764c7e3.json
assets/: output.css
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240130132138_create_subscriptions_table.sql  20240209144435_add_status_to_subscriptions.sql  20240209145710_make_status_not_null_in_subscriptions.sql  20240209152536_create_subscription_tokens_table.sql  20240229134005_create_users_table.sql  20240304124720_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: config.rs  email.rs  lib.rs  main.rs  telemetry.rs
src/app/: authentication.rs  extractor.rs  mod.rs  session_store.rs
src/app/api/: mod.rs  token.rs
src/app/api/health/: mod.rs
src/app/api/newsletter/: mod.rs  route.rs
src/app/api/subscription/: mod.rs  route.rs  schema.rs
src/app/api/user/: auth.rs  mod.rs  route.rs  schema.rs
src/app/error/: mod.rs  schema.rs
src/app/extractor/: authentication_header.rs  authorization_header.rs  mod.rs  session_cookie.rs  session_user.rs
src/app/health/: mod.rs
src/app/home/: mod.rs  route.rs
src/app/login/: mod.rs  route.rs  schema.rs
src/app/newsletter/: mod.rs  route.rs  schema.rs
src/app/subscription/: mod.rs  route.rs  schema.rs
src/app/ui/: mod.rs  not_found.rs
src/app/ui/admin/: mod.rs  route.rs  schema.rs
src/app/ui/asset/: mod.rs
src/app/ui/home/: mod.rs  route.rs
src/app/ui/login/: mod.rs  route.rs  schema.rs
src/app/user/: auth.rs  mod.rs  route.rs  schema.rs  utils.rs
src/domain/: mod.rs
src/domain/subscriber/: email.rs  mod.rs  name.rs
templates/: 404.html  admin_dashboard.html  base.html  incorrect_username_or_password.html  index.html  login.html  success.html
tests/: health_check.rs
tests/api/: health.rs  helper.rs  main.rs  subscription.rs
tests/api/newsletter/: mod.rs
tests/api/subscription/: confirm.rs  mod.rs  subscribe.rs
