[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-private"] }
chrono = "0.4.33"
config = "0.13.4"
derive_more = "0.99.17"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = "0.16.1"

[dev-dependencies]
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.7"
wiremock = "0.5.22"
